--- a/.github /workflows/deploy.yml
+++ b/.github /workflows/deploy.yml
@@ -1,66 +1,39 @@
-# 
-# Copyright (C) 2020 ArtXIA <https://github.com/artxia>
-# <https://github.com/artxia/Action-NotionSite.git>
-#
-
-name: Deploy to GitHub Pages
+name: Deploy Notion to GitHub Pages
 
 on:
-#  schedule:
-#    - cron: "*/20 * * * *"
-  workflow_dispatch:
-    inputs:
-    
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: '0 0 * * *'
+
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-20.04
-    
+  build_and_deploy:
+    runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Checkout loconotion
-        uses: actions/checkout@v3
-        with:
-          repository: leoncvlt/loconotion
-          path: loconotion
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
 
-      - name: Checkout this repo
-        uses: actions/checkout@v3
-        with:
-          path: pages_repo
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install loconotion
 
-      - name: Build Loconotion docker image
-        run: docker-compose build loconotion
-        working-directory: loconotion
+    - name: Export Notion page to HTML
+      env:
+        NOTION_PAGE_URL: ${{ secrets.NOTION_PAGE_URL }}
+        OUTPUT_DIR: 'public'
+      run: |
+        loconotion export $NOTION_PAGE_URL $OUTPUT_DIR
 
-      - name: Configuration File
-        run: |
-          cat >  ${GITHUB_WORKSPACE}/loconotion/example/example_site.toml  << EOF
-          ${{ secrets.SITE_CONFIG }}
-          EOF
-
-      - name: Run Loconotion
-        run: |
-          docker-compose run \
-          -v "${GITHUB_WORKSPACE}/pages_repo/dist:/app/loconotion/dist" \
-          -v "${GITHUB_WORKSPACE}/loconotion/example/example_site.toml:/app/loconotion/site.toml" \
-          loconotion "site.toml"
-        working-directory: loconotion
-
-      - name: Deploy to Pages
-        uses: JamesIves/github-pages-deploy-action@3.7.1
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: pages_repo/dist/notion
-          CLEAN: true
-          SINGLE_COMMIT: true
-
-      - name: Delete workflow runs
-        uses: Mattraks/delete-workflow-runs@v2
-        with:
-          token: ${{ github.token }}
-          repository: ${{ github.repository }}
-          retain_days: 2
-
-          keep_minimum_runs: 6
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./public
