--- a/.github /workflows/deploy.yml
+++ b/.github /workflows/deploy.yml
@@ -33,7 +33,9 @@ jobs:
         loconotion export $NOTION_PAGE_URL $OUTPUT_DIR
 
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+      uses: actions/deploy-pages@v2
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./public
+        token: ${{ secrets.GITHUB_TOKEN }}
+        target_branch: gh-pages
+        artifact_name: github-pages
+        build_dir: public
