--- a/.github /workflows/main.yml
+++ b/.github /workflows/main.yml
@@ -13,12 +13,12 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
 
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v2
       with:
-        python-version: "3.10"
+        python-version: 3.9
 
     - name: Install dependencies
       run: |
@@ -31,17 +31,9 @@ jobs:
         OUTPUT_DIR: 'public'
       run: |
         loconotion export $NOTION_PAGE_URL $OUTPUT_DIR
-    
-    - name: Archive public directory
-      uses: actions/upload-artifact@v2
-      with:
-        name: github-pages
-        path: public
 
     - name: Deploy to GitHub Pages
-      uses: actions/deploy-pages@v2
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        target_branch: gh-pages
-        artifact_name: github-pages
-        build_dir: public
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./public
