--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install git+https://github.com/leoncvlt/loconotion.git
+        python -m loconotion.cli export $NOTION_PAGE_URL $OUTPUT_DIR
 
     - name: Export Notion page to HTML
       env:
@@ -33,7 +33,8 @@ jobs:
         loconotion export $NOTION_PAGE_URL $OUTPUT_DIR
 
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+      uses: actions/deploy-pages@v2
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./public
+        token: ${{ secrets.GITHUB_TOKEN }}
+        target_branch: gh-pages
+        build_dir: public
