--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,14 +23,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m loconotion.cli export $NOTION_PAGE_URL $OUTPUT_DIR
+        pip install git+https://github.com/leoncvlt/loconotion.git
 
     - name: Export Notion page to HTML
       env:
         NOTION_PAGE_URL: ${{ secrets.NOTION_PAGE_URL }}
         OUTPUT_DIR: 'public'
       run: |
-        loconotion export $NOTION_PAGE_URL $OUTPUT_DIR
+        python loconotion export $NOTION_PAGE_URL $OUTPUT_DIR
 
     - name: Deploy to GitHub Pages
       uses: actions/deploy-pages@v2
