--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,10 +46,10 @@ jobs:
       run: ls loconotion/dist/sarmad-ai
     
     - name: Upload artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/actions/upload-pages-artifact@v1
       with:
         name: github-pages
-        path: loconotion/dist/sarmad-ai/*
+        path: loconotion/dist/sarmad-ai
 
     - name: Deploy to GitHub Pages
       uses: actions/deploy-pages@v2
