--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -53,6 +53,7 @@ jobs:
         path: loconotion/dist/sarmad-ai
   
   deploy:
+    needs: build
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
