--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,6 +38,10 @@ jobs:
       run: |
         cd loconotion
         pip install -r requirements.txt
+    
+    - name: Create dist directory
+      run: |
+        mkdir -p loconotion/dist/sarmad-ai
 
     - name: Export Notion page to HTML
       env:
